--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -52,6 +52,16 @@ jobs:
 
       - name: Generate configuration file
         run: make defconfig
+     	  rm package/lean/luci-app-flowoffload -fr
+          rm package/lean/shortcut-fe/ -fr
+          rm package/lean/luci-app-sfe/ -fr
+          cd package
+          git clone https://github.com/destan19/OpenAppFilter.git
+          cd -
+          echo "CONFIG_PACKAGE_appfilter=y" >>.config
+          echo "CONFIG_PACKAGE_kmod-oaf=y" >>.config
+          echo "CONFIG_PACKAGE_luci-i18n-oaf-zh-cn=y" >>.config
+          echo "CONFIG_PACKAGE_luci-app-oaf=y" >>.config
 
       - name: Make download
         run: |
@@ -75,8 +85,8 @@ jobs:
           mkdir -p ./artifact/firmware
           #mkdir -p ./artifact/package
           #mkdir -p ./artifact/buildinfo
-          rm -rf $(find ./bin/targets/ -type d -name "packages")
-          cp -rf $(find ./bin/targets/ -type f) ./artifact/firmware/
+          #rm -rf $(find ./bin/targets/ -type d -name "packages")
+          cp -rf $(find ./bin/targets/ -type f -name  "*sysupgrade*") ./artifact/firmware/
           #cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
           #cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
 
