--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -84,11 +84,11 @@ jobs:
       - name: Prepare artifact
         run: |
           mkdir -p ./artifact/firmware
-          #mkdir -p ./artifact/package
+          mkdir -p ./artifact/package
           #mkdir -p ./artifact/buildinfo
-          #rm -rf $(find ./bin/targets/ -type d -name "packages")
+          rm -rf $(find ./bin/targets/ -type d -name "packages")
           cp -rf $(find ./bin/targets/ -type f -name  "*sysupgrade*") ./artifact/firmware/
-          #cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
+          cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
           #cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
 
       - name: Deliver buildinfo
