--- a/.config
+++ b/.config
@@ -25,7 +25,7 @@ CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_mvebu is not set
 # CONFIG_TARGET_kirkwood is not set
 # CONFIG_TARGET_mediatek is not set
-CONFIG_TARGET_ramips=y
+# CONFIG_TARGET_ramips is not set
 # CONFIG_TARGET_at91 is not set
 # CONFIG_TARGET_rb532 is not set
 # CONFIG_TARGET_tegra is not set
@@ -33,7 +33,9 @@ CONFIG_TARGET_ramips=y
 # CONFIG_TARGET_octeontx is not set
 # CONFIG_TARGET_oxnas is not set
 # CONFIG_TARGET_armvirt is not set
-# CONFIG_TARGET_ipq40xx is not set
+CONFIG_TARGET_ipq40xx=y
+CONFIG_TARGET_ipq40xx_generic=y
+CONFIG_TARGET_ipq40xx_generic_DEVICE_p2w_r619ac-128m=y
 # CONFIG_TARGET_ipq806x is not set
 # CONFIG_TARGET_ipq807x is not set
 # CONFIG_TARGET_rockchip is not set
@@ -44,7 +46,7 @@ CONFIG_TARGET_ramips=y
 # CONFIG_TARGET_uml is not set
 # CONFIG_TARGET_zynq is not set
 # CONFIG_TARGET_x86 is not set
-CONFIG_TARGET_ramips_mt7620=y
+# CONFIG_TARGET_ramips_mt7620=y
 # CONFIG_TARGET_ramips_mt7621 is not set
 # CONFIG_TARGET_ramips_mt76x8 is not set
 # CONFIG_TARGET_ramips_rt288x is not set
@@ -101,7 +103,7 @@ CONFIG_TARGET_ramips_mt7620=y
 # CONFIG_TARGET_ramips_mt7620_DEVICE_kingston_mlwg2 is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_lava_lr-25g001 is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_lb-link_bl-w1200 is not set
-CONFIG_TARGET_ramips_mt7620_DEVICE_lenovo_newifi-y1=y
+# CONFIG_TARGET_ramips_mt7620_DEVICE_lenovo_newifi-y1=y
 # CONFIG_TARGET_ramips_mt7620_DEVICE_lenovo_newifi-y1s is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_linksys_e1700 is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_ralink_mt7620a-mt7530-evb is not set
@@ -162,9 +164,9 @@ CONFIG_TARGET_ramips_mt7620_DEVICE_lenovo_newifi-y1=y
 # CONFIG_TARGET_ramips_mt7620_DEVICE_iptime_a104ns is not set
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
-CONFIG_TARGET_BOARD="ramips"
-CONFIG_TARGET_SUBTARGET="mt7620"
-CONFIG_TARGET_PROFILE="DEVICE_lenovo_newifi-y1"
+CONFIG_TARGET_BOARD="R619AC"
+CONFIG_TARGET_SUBTARGET="ipq40xx"
+CONFIG_TARGET_PROFILE="Gdock"
 CONFIG_TARGET_ARCH_PACKAGES="mipsel_24kc"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mno-branch-likely -mips32r2 -mtune=24kc"
 CONFIG_CPU_TYPE="24kc"
